trunk/Archive2/1d/2ac4b74b3db9e2/output
main.cpp:8:12: error: explicit specialization of 'Inner' in class scope
    struct Inner<int> {
           ^
1 error generated.
